--- a/src/app/admin/customer-database/customer-database.component.html
+++ b/src/app/admin/customer-database/customer-database.component.html
@@ -8,14 +8,14 @@
           </span>
         </h4>
       </div>
-      <div class="col-md-6 d-flex justify-content-end pr-0">
+      <div class="col-md-6 pr-0">
         <form>
           <div class="row">
-            <div class="col-md-6">
-              <i class="fa-search fas ml-3 position-absolute text-muted" aria-hidden="true"></i>
-              <input class="form-control pl-5 w-100" type="text" placeholder="Search" aria-label="Search" name="search">
+            <div class="col-md-8 search_bar">
+              <i class="fa-search fas ml-3 position-absolute text-muted mt-3" aria-hidden="true"></i>
+              <input class="form-control pl-5" type="text" placeholder="Search" aria-label="Search" name="search">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4 month_bar">
               <select name="Filter" class="font-weight-600 form-control">
                 <option>Weekly</option>
               </select>
