--- a/src/app/admin/account-settings/account-settings.component.html
+++ b/src/app/admin/account-settings/account-settings.component.html
@@ -1,54 +1,53 @@
 <section class="section">
-  <div class="pb-5 pr-5 pt-5 row">
-    <div class="col-lg-3 pr-0">
+  <div class="pb-5 pr-5 pt-5 row account_page">
+    <div class="col-lg-3 pr-0 left-col">
       <div class="bg-white h-100 p-4">
-        <h4 class="pt-lg-5 pt-md-5 pt-sm-5 text-center text-warning">Account Settings</h4>
+        <h4 class="pt-lg-4 pt-md-4 pt-sm-4 text-center text-warning">Account Settings</h4>
         <hr>
       </div>
     </div>
-    <div class="col-lg-9 account_form_bg">
-      <div class="p-5">
+    <div class="col-lg-9 account_form_bg right-col">
+      <div class="p-5 custom-padding">
         <div class="mb-5">
-          <h4 class="font-45 font-weight-bolder">Account Settings</h4>
-          <span class="font-23">Change your Profile User Settings</span>
+          <h4 class="font-32 font-weight-bolder">Account Settings</h4>
+          <span class="font-19">Change your Profile User Settings</span>
         </div>
         <form [formGroup]="accountSettingForm" (ngSubmit)="onSubmit(accountSettingForm.valid)">
           <div class="form-group row mt-3">
             <label for="inputEmail3" class="col-sm-3 col-form-label">User Name :</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control w-75" formControlName="userName">
+              <input type="text" class="form-control w-75 full_width" formControlName="userName">
               <div
                 [class.d-none]="accountSettingForm.get('userName').valid || accountSettingForm.get('userName').untouched"
-                class="error">User Name
-                is required</div>
+                class="error">User Name is required</div>
             </div>
           </div>
           <div class="form-group row">
             <label for="inputEmail3" class="col-sm-3 col-form-label">User ID :</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control width-per-40" formControlName="userId">
+              <input type="text" class="form-control width-per-40 full_width" formControlName="userId">
               <div [class.d-none]="accountSettingForm.get('userId').valid || accountSettingForm.get('userId').untouched"
-                class="error">User ID is
-                required</div>
+                class="error">User ID is required</div>
             </div>
           </div>
           <div class="form-group row">
             <label for="inputEmail3" class="col-sm-3 col-form-label">Email :</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control w-75" formControlName="email">
+              <input type="text" class="form-control w-75 full_width" formControlName="email">
               <div [class.d-none]="accountSettingForm.get('email').valid || accountSettingForm.get('email').untouched"
-                class="error">Email is
-                required</div>
+                class="error">Email is required</div>
             </div>
           </div>
+          <input type="hidden" formControlName="roleId">
           <div class="form-group row">
             <label for="inputEmail3" class="col-sm-3 col-form-label">Role :</label>
             <div class="col-sm-9">
-              <select class="form-control custom-select width-per-40" formControlName="role">
+              <select class="form-control custom-select width-per-40 full_width" formControlName="roleName">
                 <option [disabled]="true" value="" selected>Select Role</option>
                 <option *ngFor="let role of roles" value={{role}}>{{role}}</option>
               </select>
-              <div [class.d-none]="accountSettingForm.get('role').valid || accountSettingForm.get('role').untouched"
+              <div
+                [class.d-none]="accountSettingForm.get('roleName').valid || accountSettingForm.get('roleName').untouched"
                 class="error">Role is required
               </div>
             </div>
@@ -56,7 +55,7 @@
           <div class="form-group row">
             <label for="inputEmail3" class="col-sm-3 col-form-label">Department :</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control w-75" formControlName="department">
+              <input type="text" class="form-control w-75 full_width" formControlName="department">
               <div
                 [class.d-none]="accountSettingForm.get('department').valid || accountSettingForm.get('department').untouched"
                 class="error">
@@ -66,22 +65,21 @@
           <div class="form-group row">
             <label for="inputEmail3" class="col-sm-3 col-form-label">New Password :</label>
             <div class="col-sm-9">
-              <input type="password" class="form-control w-75" formControlName="password">
+              <input type="password" class="form-control w-75 full_width" formControlName="password">
               <div
                 [class.d-none]="accountSettingForm.get('password').valid || accountSettingForm.get('password').untouched"
-                class="error">Password
-                is required</div>
+                class="error">Password must contain atleast 8 characters</div>
             </div>
           </div>
           <div class="form-group row">
             <label for="inputEmail3" class="col-sm-3 col-form-label">Repeat Password :</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control w-75" formControlName="repeatPassword">
+              <input type="text" class="form-control w-75 full_width" formControlName="repeatPassword">
               <div
                 [class.d-none]="accountSettingForm.get('repeatPassword').valid || accountSettingForm.get('repeatPassword').untouched"
                 class="error">Repeat Password is required</div>
-              <div *ngIf="accountSettingForm.errors?.misMatch" class="error">Password and Repeat Password does
-                not match</div>
+              <div *ngIf="accountSettingForm.errors?.misMatch" class="error">Password and Repeat Password does not match
+              </div>
             </div>
           </div>
           <div class="form-group row">
