--- a/src/app/basket-details/assist-market/assist-market.component.html
+++ b/src/app/basket-details/assist-market/assist-market.component.html
@@ -1,6 +1,6 @@
 <h2 class="bg-blue-grey font-17 mb-0 p-15 pl-4">Car Register #{{currentData}}</h2>
 <form [formGroup]="basketDetailForm">
-  <div class="row d-flex">
+  <div class="pl-4 row">
     <div class="col-md-6 border-right pl-4 pr-5">
       <div class="form-group row mt-3">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Car Reg. No.</label>
@@ -105,11 +105,9 @@
         </div>
       </div>
       <div class="form-group row  pl-4 pr-5">
-        <label class="col-sm-5 col-form-label font-weight-bold">2. Change NCD</label>
+        <label class="col-sm-5 col-form-label font-weight-bold">2. Change Market Value</label>
         <div class="col-sm-5">
-          <select class="font-weight-600 form-control">
-            <option>Select</option>
-          </select>
+          <input type="text" class="form-control" placeholder="Amount">
         </div>
       </div>
       <div class="form-group row  pl-4 pr-5">
