Target Achiever table issue fixed

--- a/src/app/admin/account-settings/account-settings.component.html
+++ b/src/app/admin/account-settings/account-settings.component.html
@@ -85,7 +85,8 @@
           <div class="form-group row">
             <label for="inputEmail3" class="col-sm-3 col-form-label"></label>
             <div class="col-sm-9 text-center">
-              <button type="reset" class="pb-1 pl-5 pr-5 pt-1 btn bg-transparent border-0">Cancel</button>
+              <button type="button" class="pb-1 pl-5 pr-5 pt-1 btn bg-transparent border-0"
+                (click)="cancelHandler()">Cancel</button>
               <button type="submit" class="bg-indigo btn pb-1 pl-5 pr-5 pt-1 text-white">Update</button>
             </div>
           </div>
