--- a/src/app/admin/target-achiever/target-achiever.component.html
+++ b/src/app/admin/target-achiever/target-achiever.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 pl-0 align-self-lg-center">
-        <h4 class="font-17 text-dark">
+        <h4 class="font-17 text-dark page_title">
           <span class="font-weight-600">Target/</span>
           <span>Achiever</span>
         </h4>
@@ -39,7 +39,7 @@
             <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8 table-bordered">
               <ng-container matColumnDef="user">
                 <th scope="col" mat-header-cell *matHeaderCellDef>User ID</th>
-                <td mat-cell *matCellDef="let element" class="font-14 font-weight-600 text-info">{{element.user}}</td>
+                <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">{{element.user}}</td>
               </ng-container>
 
               <ng-container matColumnDef="role">
@@ -55,21 +55,21 @@
               <ng-container matColumnDef="target">
                 <th scope="col" mat-header-cell *matHeaderCellDef>Target</th>
                 <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">
-                  <input type="text" class="form-control" name="target" [(ngModel)]="element.target">
+                  <input type="text" class="form-control cstm-form w-50" name="target" [(ngModel)]="element.target">
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="achiever">
                 <th scope="col" mat-header-cell *matHeaderCellDef>Achiever</th>
                 <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">
-                  <input type="text" class="form-control" name="achiever" [(ngModel)]="element.achiever">
+                  <input type="text" class="form-control cstm-form w-50" name="achiever" [(ngModel)]="element.achiever">
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="action">
-                <th scope="col" mat-header-cell *matHeaderCellDef>Status</th>
+                <th scope="col" mat-header-cell *matHeaderCellDef>Action</th>
                 <td mat-cell *matCellDef="let element">
-                  <button class="bg-amber btn rounded-pill width-per-100 text-dark font-weight-600"
+                  <button class="bg-green btn rounded-pill width-per-100 text-white font-weight-600 "
                     (click)="updateHandler(element.action, element.target, element.achiever)">Update</button>
                 </td>
               </ng-container>
