--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -9,10 +9,12 @@
               <p>Enter your email address and we’ll send you a reset password link!</p>
               <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit(forgotPasswordForm.valid)">
                 <div class="form-group">
-                  <input id="email" type="email" formConstrolName="email" placeholder="Your Email.."
+                  <input type="email" formControlName="email" placeholder="Your Email.."
                     class="form-control rounded-0" />
-                  <div *ngIf="forgotPasswordForm.get('email').invalid && forgotPasswordForm.get('email').touched"
-                    class="error">Email is required</div>
+                  <div *ngIf="email.invalid && (email.dirty || email.touched)">
+                    <div *ngIf="email.errors.required" class="error">Email is required</div>
+                    <div *ngIf="email.errors.pattern" class="error">Invalid Email</div>
+                  </div>
                 </div>
                 <div class="form-group mt-5">
                   <button type="submit" class="btn btn-info w-50 reset-btn">Reset Password</button>
