Design Changes Implemented

--- a/src/app/admin/common-basket/common-basket.component.html
+++ b/src/app/admin/common-basket/common-basket.component.html
@@ -1,7 +1,7 @@
 <div class="second_top_bar bg-white p-10">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 pl-0 align-self-lg-center">
+      <div class="col-md-6 pl-0 align-self-center">
         <h4 class="font-17 text-dark">
           <span class="font-weight-600" *ngIf="routeData.category !== undefined">
             {{routeData.category}}/
@@ -21,12 +21,12 @@
       <div class="col-md-6 pr-0">
         <form #filterForm="ngForm">
           <div class="row">
-            <div class="col-md-8 search_bar">
+            <div class="col-lg-8 col-md-7 search_bar">
               <i class="fa-search fas ml-3 position-absolute text-muted mt-3" aria-hidden="true"></i>
               <input class="form-control pl-5" type="text" placeholder="Search" aria-label="Search" name="search"
                 [(ngModel)]="search" (keyup)="searchFor($event.target.value)">
             </div>
-            <div class="col-md-4 month_bar">
+            <div class="col-lg-4 col-md-5 month_bar">
               <select [(ngModel)]="filter" name="Filter" class="font-weight-600 form-control"
                 (ngModelChange)="onFilterChanged($event)">
                 <option *ngFor="let filter of filters" value="{{filter.value}}">{{filter.option}}</option>
@@ -38,11 +38,18 @@
     </div>
   </div>
 </div>
-<section class="section">
+<section class="section mb-5">
   <div class="row">
     <div class="col-lg-12">
       <ng-template [ngIf]="dataSource.data.length === 0" [ngIfElse]="elseBlock">
-        <h1>No Data</h1>
+        <div class="container">
+          <div class="align-items-center justify-content-center row vh-100">
+            <div class="col-md-4 text-center no-data-found">
+              <img class="img-fluid " src="assets/img/no-data-found.png">
+              <h1 class="font-30 mt-2">No Data Found</h1>
+            </div>
+          </div>
+        </div>
       </ng-template>
       <ng-template #elseBlock>
         <div class="responsive-table-custom">
