--- a/src/app/widgets/sale-widget/sale-widget.component.html
+++ b/src/app/widgets/sale-widget/sale-widget.component.html
@@ -23,9 +23,9 @@
     </div>
   </ng-template>
   <ng-template #elseBlock>
-    <div class="col-sm-8">
-      <div class="col-sm-12 p-0">
-        <h4 class="font-19 text-center text-white">No Sale Takaful</h4>
+    <div class="col-sm-8 d-flex">
+      <div class="col-sm-12 p-0 align-self-center">
+        <h4 class="font-25 text-center text-white">No Takaful Sale</h4>
       </div>
     </div>
   </ng-template>
