--- a/src/app/admin/common-basket/common-basket.component.css
+++ b/src/app/admin/common-basket/common-basket.component.css
@@ -4,6 +4,7 @@
   position: relative;
   padding-right: none;
 }
+
 .second_top_bar {
   left: 0;
   right: 0;
@@ -13,38 +14,49 @@
   position: absolute;
   padding-bottom: 10px;
 }
+
 .section {
   margin-top: 66px;
 }
+
 table {
   width: 100%;
 }
+
 tr.mat-row {
   background-color: #fff;
 }
+
 tr.example-detail-row {
   height: 0;
   padding: 0;
 }
+
 tr.example-detail-row > td {
   padding: 0;
 }
+
 tr.example-element-row:not(.example-expanded-row):hover {
   background: whitesmoke;
 }
+
 tr.example-element-row:not(.example-expanded-row):active {
   background: #efefef;
 }
+
 .example-element-row td {
   border-bottom-width: 0;
 }
+
 .example-element-detail {
   display: flex;
   overflow: hidden;
 }
+
 .example-element-description {
   width: 100%;
 }
+
 tr.mat-header-row {
   height: 56px;
   border-top: hidden;
@@ -52,7 +64,17 @@ tr.mat-header-row {
   border-right: hidden;
 }
 
+.no-data-found img {
+  height: auto;
+  max-width: 152px;
+  margin-bottom: 6%;
+}
+
 @media only screen and (min-device-width: 220px) and (max-device-width: 768px) {
+  h4 {
+    margin-bottom: 0;
+    text-align: center;
+  }
   .section {
     margin-top: 185px !important;
   }
