--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -9,31 +9,33 @@
             <span class="text-muted font-weight-bolder">Welcome back to insurance portal Admin</span>
             <form #filterForm="ngForm">
               <select [(ngModel)]="filter" name="Filter" (ngModelChange)="onFilterChanged($event)"
-                class="font-weight-600 float-lg-right float-md-right form-control mt-lg-5 mt-md-5 mt-sm-2 width-per-35">
+                class="filter-select-dashboard font-weight-600 float-lg-right float-md-right form-control mt-lg-5 mt-md-5 mt-sm-2 width-per-35">
                 <option *ngFor="let item of filters" [value]="item.value">{{item.option}}</option>
               </select>
             </form>
           </div>
         </div>
-        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 pr-0">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
           <app-sale-widget></app-sale-widget>
         </div>
       </div>
       <app-note-widget [_filter]="filter"></app-note-widget>
-      <div class="row third_row dashboard-box">
-        <div class="col-md-6 third_row_first_col">
-          <app-quote-widget [_filter]="filter"></app-quote-widget>
-        </div>
-        <div class="col-md-6 bg-white rounded text-dark third_row_second_col">
-          <h4 class="font-15 mb-4 mt-4 text-muted">Activity List</h4>
-          <app-basket-widget [_filter]="filter"></app-basket-widget>
+      <div class="container">
+        <div class="row third_row dashboard-box">
+          <div class="col-md-6 third_row_first_col pl-0">
+            <app-quote-widget [_filter]="filter"></app-quote-widget>
+          </div>
+          <div class="col-md-6 bg-white rounded text-dark third_row_second_col">
+            <h4 class="font-15 mt-4 text-muted">Activity List</h4>
+            <app-basket-widget [_filter]="filter"></app-basket-widget>
+          </div>
         </div>
       </div>
     </div>
     <!-- left right content code End -->
 
     <!-- right side bar code start -->
-    <div class="col-md-12 col-lg-3 col-xl-3">
+    <div class="col-md-12 col-lg-3 col-xl-3 mb-2">
       <app-issue-widget></app-issue-widget>
     </div>
     <!-- right side bar code end -->
