--- a/src/app/admin/user-management/user-management.component.html
+++ b/src/app/admin/user-management/user-management.component.html
@@ -22,7 +22,7 @@
   <div class="section-body mt-4 pb-4">
     <div class="row">
       <div class="col-12 col-md-12 col-lg-12">
-        <form #filterForm="ngForm" class="form-inline mb-4">
+        <form #filterForm="ngForm" class="form-inline mb-4 user-search-form">
           <div class="has-search form-group ml-0 mb-2 mb-sm-0 mr-4">
             <span class="fa fa-search form-control-feedback"></span>
             <input type="text" class="form-control" placeholder="Search User Name, Email, Role" name="Filter"
