--- a/src/app/widgets/note-widget/note-widget.component.html
+++ b/src/app/widgets/note-widget/note-widget.component.html
@@ -1,5 +1,5 @@
 <div class="row second_row dashboard-box">
-  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 pr-0 mb-md-3 mb-sm-3"
+  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 mb-md-3 mb-sm-3"
     *ngFor="let note of coverNoteStatisticResponseData.list">
     <div class="card card-sales-widget">
       <div class="card-wrap">
