--- a/src/app/admin/notification/notification.component.css
+++ b/src/app/admin/notification/notification.component.css
@@ -22,8 +22,41 @@ table {
 tr.mat-row {
   background-color: #fff;
 }
+tr.example-detail-row {
+  height: 0;
+  padding: 0;
+}
+tr.example-detail-row > td {
+  padding: 0;
+}
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: whitesmoke;
+}
+tr.example-element-row:not(.example-expanded-row):active {
+  background: #efefef;
+}
+.example-element-row td {
+  border-bottom-width: 0;
+}
+.example-element-detail {
+  display: flex;
+  overflow: hidden;
+}
+.example-element-description {
+  width: 100%;
+}
+tr.mat-header-row {
+  height: 56px;
+  border-top: hidden;
+  border-left: hidden;
+  border-right: hidden;
+}
 
 @media only screen and (min-device-width: 220px) and (max-device-width: 768px) {
+  h4 {
+    margin-bottom: 0;
+    text-align: center;
+  }
   .section {
     margin-top: 185px !important;
   }
